--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   liquid_swipe: ^3.0.0
   smooth_page_indicator: ^1.0.0+2
   get: ^4.6.5
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -30,4 +31,5 @@ flutter:
     - assets/images/spalash/
     - assets/images/welcome_images/
     - assets/images/logo/
+    - assets/images/forget/
 
